Refactor ounit functions